profile and password reset

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="/js/landingController.js"></script>
     <script type="text/javascript" src="/js/startController.js"></script>
     <script type="text/javascript" src="/js/profileController.js"></script>
+    <script type="text/javascript" src="/js/resetPwdController.js"></script>
     <script type="text/javascript" src="/js/expenseController.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Raleway" rel="stylesheet">
